--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
     </audio>
 
     <script src="script.js"></script>
+    <div style="position: fixed; top: 10px; left: 10px; background: white; padding: 10px;">
+    <button onclick="document.getElementById('background-music').play()">Enable Sound</button>
+</div>
 </body>
 </html>
