--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         </div>
     </div>
 
-    <!-- Audio Elements -->
-    <audio id="background-music" loop>
+    <!-- Audio Elements with preload and autoplay -->
+    <audio id="background-music" loop preload="auto">
         <source src="assets/sounds/background.mp3" type="audio/mpeg">
     </audio>
-    <audio id="win-sound">
+    <audio id="win-sound" preload="auto">
         <source src="assets/sounds/win.mp3" type="audio/mpeg">
     </audio>
-    <audio id="lose-sound">
+    <audio id="lose-sound" preload="auto">
         <source src="assets/sounds/lose.mp3" type="audio/mpeg">
     </audio>
 
